<resources>
    <string name="app_name">BMI Calc</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="hello">Hello User</string>
    <string name="calculateBMI">Calculate</string>
    <string name="start">Start</string>
    <string name="male">Mężczyzna</string>
    <string name="female">Kobieta</string>
    <string name="age">Wiek</string>

    <string name="wyglodzenie">Wygłodzenie</string>
    <string name="wychudzenie">Wychudzenie</string>
    <string name="niedowaga">Niedowaga</string>
    <string name="wartosc_prawidlowa">Wartość Prawidłowa</string>
    <string name="nadwaga">Nadwaga</string>
    <string name="I_stopien_otylosci">I stopień otyłości</string>
    <string name="II_stopien_otylosci">II stopień otyłości</string>
    <string name="otyłosc_skrajna">Otyłość Skrajna</string>
</resources>
